# avrusb

./: .gitignore  README.md
common/: config.h
docs/: desc.txt  desc01.txt
driver/: libusb_device.inf
firmware/: firmware.cbp  firmware.depend  firmware.layout
firmware/project_files/code_blocks_atmega8/: atmega8.cbp  atmega8.depend  atmega8.layout
firmware/project_files/code_blocks_atmega88/: atmega88.cbp  atmega88.depend  atmega88.layout  usbconfig.h
firmware/src/: cpu_io.c  cpu_io.h  dbg.c  dbg.h  funcs.c  funcs.h  main.c  usbconfig.h
software/: CMakeLists.txt  config-win32.cmake  debug.sh
software/application/: CMakeLists.txt
software/application/src/: dial.cpp  dial.h  images.qrc  intro.cpp  intro.h  main.cpp  moto.cpp  moto.h  moto.ui  moto_io.cpp  state.cpp  state.h
software/installer/: installer.iss
software/libadvwidgets/: CMakeLists.txt
software/libadvwidgets/src/analog_widgets/: bitmapbutton.cpp  manometer.cpp  thermometer.cpp  thermometer.h
software/libadvwidgets/src/img_button/: img_button.cpp  img_button.h  img_button.qrc
software/libadvwidgets/src/led/: qled.cpp  qled.h  qled.qrc  qledplugin.cpp  qledplugin.h  qledplugin.pro  test.ui
software/libadvwidgets/src/switch/: qswitchplugin.cpp  qswitchplugin.h  qswitchplugin.pro
software/libio/: CMakeLists.txt
software/libio/src/: ctrlboard_functions.h  ctrlboard_io.cpp  ctrlboard_io.h  lowlevel_io.cpp  lowlevel_io.h  usb_io.cpp  usb_io.h
software/libio/src/unix/: usb_io.cpp
software/libio/src/windows/: usb_io.cpp
software/libwidgets/: CMakeLists.txt
software/libwidgets/src/: osc.cpp  osc.h  osc_scaler.cpp  osc_scaler.h
